@startuml
title Switch validate FSM

[*] --> INIT
INIT --> FETCH_SCHEMA

FETCH_SCHEMA --> ERROR : error\ntimeout
FETCH_SCHEMA --> VALIDATE : switch_schema
FETCH_SCHEMA : enter / schema-request

VALIDATE --> [*]
VALIDATE : enter / validate-flows
VALIDATE : enter / validate-meters

ERROR --> [*]

@enduml
